Fixing issue with margin of about me text on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,9 +19,9 @@ li {
   text-decoration: none;
 }
 
-.about-me-line {
+/*.about-me-line {
   margin-right: 48px;
-}
+}*/
 
 h3 span {
   text-decoration: underline;
